--- a/index.ipynb
+++ b/index.ipynb
@@ -72,7 +72,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate sum of squared errors between regression and mean line \n",
     "import numpy as np\n",
@@ -86,7 +97,10 @@
     "    return\n",
     "    squared error between regression and true line (ss_tot)\n",
     "    \"\"\"\n",
-    "    pass\n",
+    "    sq_err = 0\n",
+    "    for x in range(0, len(ys_a)):\n",
+    "        sq_err += (ys_a[x] - ys_b[x]) **2\n",
+    "    return sq_err\n",
     "\n",
     "# Check the output with some toy data\n",
     "Y_a = np.array([1,3,5,7])\n",
@@ -110,9 +124,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.35"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate Y_mean , squared error for regression and mean line , and calculate r-squared\n",
     "\n",
@@ -125,7 +150,11 @@
     "    return\n",
     "    r_squared value\n",
     "    \"\"\"\n",
-    "    pass\n",
+    "    a = sq_err(ys_real, ys_predicted)\n",
+    "    b = 0\n",
+    "    for i in ys_real:\n",
+    "        b += (i - ys_real.mean()) ** 2\n",
+    "    return 1 - (a/b)\n",
     "\n",
     "# Check the output with some toy data\n",
     "Y_real = np.array([1,3,5,7])\n",
@@ -168,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
